[project]
name = "hystan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shogohasegawa", email = "hasesho0824@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "mpld3>=0.5.10",
    "pandas==2.2.2",
    "scikit-learn>=1.6.1",
    "scipy==1.11.4",
    "tqdm>=4.67.1",
    "numpy==1.26.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
]
